--- a/zitest/ERezeptExtractor/ERezeptExtractor.csproj
+++ b/zitest/ERezeptExtractor/ERezeptExtractor.csproj
@@ -15,6 +15,11 @@
   <ItemGroup>
     <PackageReference Include="System.Xml.XPath" Version="4.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
